white space solve

--- a/css/home.css
+++ b/css/home.css
@@ -3,9 +3,9 @@
     padding: 0;
     
 }
-body{
+/* body{
     overflow-x: hidden  !important;
-}
+} */
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
@@ -117,7 +117,8 @@ overflow: hidden;
 .card{
     height: 23rem;
     width: 19rem !important;
-    margin-left: 2rem !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
     display: inline-block;
 }
 .testm-message{
